Bug 1113825 - Nowrap content in console.table(). r=bgrins
UltraBlame original commit: c050984325e379286c1456a261b0cdc92dab89c1

--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -498,6 +498,16 @@ a {
   margin: 5px 0 0 0;
 }
 
+
+
+
+.consoletable .table-widget-cell > span {
+  overflow: hidden;
+  display: flex;
+  height: 1.25em;
+  line-height: 1.25em;
+}
+
 .theme-light .message[severity=error] .stacktrace {
   background-color: rgba(255, 255, 255, 0.5);
 }
